cluster/mail/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mailserver
  namespace: mailserver
  annotations:
    kubernetes.io/ingress.class: "internal"
spec:
  rules:
  - host: mail.sko.ai
    http:
      paths:
      - backend:
          serviceName: http-echo
          servicePort: 80
        path: /mailserver
  tls:
  - hosts:
    - mail.sko.ai
