cluster/mail/roundcube.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roundcube
  namespace: mailserver
spec:
  rules:
    - host: wm.sko.ai
      http:
        paths:
          - backend:
              service:
                name: roundcube
                port: 
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: roundcube
  namespace: mailserver
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: roundcube
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcube
  namespace: mailserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roundcube
  template:
    metadata:
      labels:
        app: roundcube
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - image: roundcube/roundcubemail:1.6.1-apache
          name: roundcube
