cluster/mail/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Webmail
    gethomepage.dev/group: Cloud
    gethomepage.dev/icon: mailu
    gethomepage.dev/name: Webmail
spec:
  parentRefs:
    - name: internal
      namespace: agentgateway
  hostnames:
    - mail.sko.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: alps
          port: 1323
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
